# Vizun

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
lib/glfw/: CMakeLists.txt
lib/vma/: CMakeLists.txt
lib/vma/include/: vk_mem_alloc.h
rsc/shaders/: compile.sh  default_frag.glsl  default_frag.spv  default_vert.glsl  default_vert.spv  font_frag.glsl  font_vert.glsl  line_vert.glsl
rsc/shaders/include/: font_frag.h  font_vert.h  image_frag.h  image_vert.h  line_fill_frag.h  line_fill_vert.h  line_frag.h  line_vert.h
src/: RenderWindow.cpp  RenderWindow.hpp  VizunEngine.cpp  VizunEngine.hpp  pch.h
src/config/: VizunConfig.hpp  VulkanRenderWindowConfig.hpp
src/core/: VizunEngine.cpp  VizunEngine.hpp
src/data/: Color.hpp  FontVertex.hpp  GeometryVertex.hpp  ImageVertex.hpp  Transform.hpp  Vertex.hpp
src/graphics/: Image.cpp  Image.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderWindow.cpp  RenderWindow.hpp  Renderer.cpp  Renderer.hpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VulkanBase.cpp  VulkanBase.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanGraphicsPipelineDescriptor.cpp  VulkanGraphicsPipelineDescriptor.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
src/graphics/base/: VulkanBase.cpp  VulkanBase.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
src/graphics/pipeline/: VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanGraphicsPipelineDescriptor.cpp  VulkanGraphicsPipelineDescriptor.hpp
src/graphics/renderer/: Camera.cpp  Camera.hpp  VulkanFontPipelineRenderer.cpp  VulkanFontPipelineRenderer.hpp  VulkanGraphicsPipelineRenderer.hpp  VulkanImagePipelineRenderer.cpp  VulkanImagePipelineRenderer.hpp  VulkanLinePipelineRenderer.cpp  VulkanLinePipelineRenderer.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanTrianglePipelineRenderer.cpp  VulkanTrianglePipelineRenderer.hpp
src/graphics/renderer/pipeline_renderer/: VulkanFontPipelineRenderer.cpp  VulkanFontPipelineRenderer.hpp  VulkanImagePipelineRenderer.cpp  VulkanImagePipelineRenderer.hpp  VulkanLinePipelineRenderer.cpp  VulkanLinePipelineRenderer.hpp  VulkanTrianglePipelineRenderer.cpp  VulkanTrianglePipelineRenderer.hpp
src/graphics/renderer/targets/: Image.cpp  Image.hpp  Line.cpp  Line.hpp  Rectangle.hpp  RenderTarget.hpp  Text.cpp  Text.hpp  Transform.hpp
src/graphics/renderer/targets/geometry/: Line.cpp  Line.hpp  Rectangle.cpp  Rectangle.hpp  Triangle.cpp  Triangle.hpp
src/graphics/renderpass/: VulkanRenderPass.cpp  VulkanRenderPass.hpp
src/graphics/resources/: Font.cpp  Font.hpp  StorageBuffer.cpp  StorageBuffer.hpp  UniformBuffer.cpp  VertexIndexBuffer.cpp  VertexIndexBuffer.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanFont.cpp  VulkanFont.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanTexture.cpp  VulkanTexture.hpp
src/graphics/resources/buffer/: StorageBuffer.cpp  UniformBuffer.hpp  VertexIndexBuffer.cpp  VertexIndexBuffer.hpp
src/graphics/window/: RenderWindow.cpp  RenderWindow.hpp
src/resource_loader/: ResourceLoader.cpp  ResourceLoader.hpp
src/resource_loader/loader/: Loader.hpp  VulkanFontLoader.cpp  VulkanFontLoader.hpp  VulkanImageLoader.cpp  VulkanImageLoader.hpp
src/utils/: Events.cpp  Events.hpp  FileUtil.cpp  FileUtil.hpp  Logger.hpp  VulkanConfig.hpp  VulkanUtils.cpp  VulkanUtils.hpp
